actualización en el main

--- a/index.html
+++ b/index.html
@@ -77,14 +77,21 @@
                     cumque non amet optio officia cupiditate dolores aut, quia perspiciatis rem corporis iure.
                     Dignissimos, nobis? Perferendis, soluta!</p>
             </article>
+            <article>
+                <h2>lorem ipsum3</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus quod laboriosam eveniet illum
+                    cumque non amet optio officia cupiditate dolores aut, quia perspiciatis rem corporis iure.
+                    Dignissimos, nobis? Perferendis, soluta!</p>
+            </article>
         </section>
-
         <aside>
             <h2>lorem ipsun4</h2>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio nihil dolores vitae veritatis minima
                 perferendis ipsam minus similique ea accusantium, est sunt quasi autem ratione placeat! Odit, libero!
                 Tempore, inventore!</p>
         </aside>
+
+        
     </main>
 </body>
 
