Modifiqué el menu desplegable

--- a/index.html
+++ b/index.html
@@ -11,52 +11,51 @@
 
 <body>
     <header>
-        <img .class="logo" src="images/logoFondo.png"
-            alt="Logo de la Asociación Civil de Canaricultores Villamarienses">
-        <h1>Asociación Civil de Canaricultores Villamarienses</h1>
-    </header>
-    <div class="contenedor-menu">
-        <nav>
-            <ul class="menu">
-                <li class="boton-menu"><a href="#">Inicio</a></li>
-                <li class="boton-menu"><a href="#">Institucional</a>
+        <div class="contenedor-menu">
+            <nav>
+                <ul class="menu">
+                    <li class="boton-menu"><a href="#">Inicio</a></li>
+                    <li class="boton-menu"><a href="#">Institucional</a></li>
                     <!-- COMIENZA SUBMENU -->
                     <ul class="submenu">
                         <li class="boton-submenu"><a chref="#">Quienes Somos</a></li>
                         <li class="boton-submenu"><a chref="#">Autoridades</a></li>
                     </ul>
                     <!-- TERMINA SUBMENU -->
-                </li>
-                <li class="boton-menu"><a class="menulink" href="#">Ramas</a>
-                    <!-- COMIENZA SUBMENU -->
-                    <ul class="submenu">
-                        <li class="boton-submenu"><a href="#">Canto</a></li>
-                        <li class="boton-submenu"><a href="#">Color</a></li>
-                        <li class="boton-submenu"><a href="#">Exóticos</a></li>
-                        <li class="boton-submenu"><a href="#">Fauna</a></li>
-                        <li class="boton-submenu"><a href="#">Híbridos</a></li>
-                        <li class="boton-submenu"><a href="#">Palomas y Gallináceos</a></li>
-                        <li class="boton-submenu"><a href="#">Pericos Ondulados Estandarizados</a></li>
-                        <li class="boton-submenu"><a href="#">Porte</a></li>
-                        <li class="boton-submenu"><a href="#">Psitácidos</a></li>
-                    </ul>
-                    <!-- TERMINA SUBMENU -->
-                </li>
-                <li class="boton-menu"><a href="#">Campeonatos</a></li>
-                <li class="boton-menu"><a href="#">Novedades</a>
-                    <!-- COMIENZA SUBMENU -->
-                    <ul class="submenu">
-                        <li class="boton-submenu"><a href="#">Noticias</a></li>
-                        <li class="boton-submenu"><a href="#">Artículos</a></li>
-                        <li class="boton-submenu"><a href="#">Galería</a></li>
-                    </ul>
-                    <!-- TERMINA SUBMENU -->
-                </li>
-                <li class="boton-menu"><a href="#">Asociaciones</a></li>
-                <li class="boton-menu"><a href="#">Información útil</a></li>
-            </ul>
-        </nav>
-    </div>
+                    </li>
+                    <li class="boton-menu"><a class="menulink" href="#">Ramas</a>
+                        <!-- COMIENZA SUBMENU -->
+                        <ul class="submenu">
+                            <li class="boton-submenu"><a href="#">Canto</a></li>
+                            <li class="boton-submenu"><a href="#">Color</a></li>
+                            <li class="boton-submenu"><a href="#">Exóticos</a></li>
+                            <li class="boton-submenu"><a href="#">Fauna</a></li>
+                            <li class="boton-submenu"><a href="#">Híbridos</a></li>
+                            <li class="boton-submenu"><a href="#">Palomas y Gallináceos</a></li>
+                            <li class="boton-submenu"><a href="#">Pericos Ondulados Estandarizados</a></li>
+                            <li class="boton-submenu"><a href="#">Porte</a></li>
+                            <li class="boton-submenu"><a href="#">Psitácidos</a></li>
+                        </ul>
+                        <!-- TERMINA SUBMENU -->
+                    </li>
+                    <li class="boton-menu"><a href="#">Campeonatos</a></li>
+                    <li class="boton-menu"><a href="#">Novedades</a>
+                        <!-- COMIENZA SUBMENU -->
+                        <ul class="submenu">
+                            <li class="boton-submenu"><a href="#">Noticias</a></li>
+                            <li class="boton-submenu"><a href="#">Artículos</a></li>
+                            <li class="boton-submenu"><a href="#">Galería</a></li>
+                        </ul>
+                        <!-- TERMINA SUBMENU -->
+                    </li>
+                    <li class="boton-menu"><a href="#">Asociaciones</a></li>
+                    <li class="boton-menu"><a href="#">Información útil</a></li>
+                </ul>
+            </nav>
+        </div>
+        <img class="logo" src="images/logoFondo.png" alt="Logo de la Asociación Civil de Canaricultores Villamarienses">
+        <h1>Asociación Civil de Canaricultores Villamarienses</h1>
+    </header>
     <main>
         <section>
             <article>
@@ -91,7 +90,7 @@
                 Tempore, inventore!</p>
         </aside>
 
-        
+
     </main>
 </body>
 
