creé la pagina de clasificacion por color

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en/es">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
         <div class="contenedor-menu">
             <nav>
                 <ul class="menu">
-                    <li class="boton-menu"><a href="#">Inicio</a></li>
+                    <li class="boton-menu"><a href="index.html">Inicio</a></li>
                     <li class="boton-menu"><a href="#">Institucional</a></li>
                     <!-- COMIENZA SUBMENU -->
                     <ul class="submenu">
@@ -27,7 +27,7 @@
                         <!-- COMIENZA SUBMENU -->
                         <ul class="submenu">
                             <li class="boton-submenu"><a href="#">Canto</a></li>
-                            <li class="boton-submenu"><a href="#">Color</a></li>
+                            <li class="boton-submenu"><a href="color.html">Color</a></li>
                             <li class="boton-submenu"><a href="#">Exóticos</a></li>
                             <li class="boton-submenu"><a href="#">Fauna</a></li>
                             <li class="boton-submenu"><a href="#">Híbridos</a></li>
