--- a/color.html
+++ b/color.html
@@ -11,6 +11,9 @@
 
 <body>
     <header>
+        <div class="menu-btn">
+            <a href="#" class="btn-menu">Menu</a><span class="lnr lnr-menu"></span>
+        </div>
         <div class="contenedor-menu">
             <nav>
                 <ul class="menu">
@@ -23,7 +26,7 @@
                     </ul>
                     <!-- TERMINA SUBMENU -->
                     </li>
-                    <li class="boton-menu"><a class="menulink" href="#">Ramas</a>
+                    <li class="boton-menu"><a class="menulink" href="#">Ramas<span class="lnr lnr-chevron-down"></span></a>
                         <!-- COMIENZA SUBMENU -->
                         <ul class="submenu">
                             <li class="boton-submenu"><a href="#">Canto</a></li>
@@ -39,7 +42,7 @@
                         <!-- TERMINA SUBMENU -->
                     </li>
                     <li class="boton-menu"><a href="#">Campeonatos</a></li>
-                    <li class="boton-menu"><a href="#">Novedades</a>
+                    <li class="boton-menu"><a href="#">Novedades<span class="lnr lnr-chevron-down"></span></a>
                         <!-- COMIENZA SUBMENU -->
                         <ul class="submenu">
                             <li class="boton-submenu"><a href="#">Noticias</a></li>
