--- a/index.html
+++ b/index.html
@@ -6,11 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="fonts.css">
     <title>Canaricultores VM</title>
 </head>
 
 <body>
     <header>
+        <div class="menu-btn">
+            <a href="#" class="btn-menu">Menu</a><span class="lnr lnr-menu"></span>
+        </div>
         <div class="contenedor-menu">
             <nav>
                 <ul class="menu">
@@ -23,7 +27,7 @@
                     </ul>
                     <!-- TERMINA SUBMENU -->
                     </li>
-                    <li class="boton-menu"><a class="menulink" href="#">Ramas</a>
+                    <li class="boton-menu"><a class="menulink" href="#">Ramas<span class="lnr lnr-chevron-down"></span></a>
                         <!-- COMIENZA SUBMENU -->
                         <ul class="submenu">
                             <li class="boton-submenu"><a href="#">Canto</a></li>
@@ -39,7 +43,7 @@
                         <!-- TERMINA SUBMENU -->
                     </li>
                     <li class="boton-menu"><a href="#">Campeonatos</a></li>
-                    <li class="boton-menu"><a href="#">Novedades</a>
+                    <li class="boton-menu"><a href="#">Novedades<span class="lnr lnr-chevron-down"></span></a>
                         <!-- COMIENZA SUBMENU -->
                         <ul class="submenu">
                             <li class="boton-submenu"><a href="#">Noticias</a></li>
@@ -92,6 +96,9 @@
 
 
     </main>
+
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="menu.js"></script>
 </body>
 
 </html>
