agregué los script faltantes en amarillo y color

--- a/color.html
+++ b/color.html
@@ -163,6 +163,9 @@
         <p>Fuente: <a href="https://www.canarios.top/canarios-de-color/#Clasificacion_del_canario_de_color">Canarios.top</a></p>
 
     </main>
+    
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="menu.js"></script>
 </body>
 
 </html>
