--- a/amarillos.html
+++ b/amarillos.html
@@ -151,6 +151,8 @@
         </p><br>
         <p>Fuente: <a href="https://www.canarios.top/canario-amarillo/">Canarios.Top</a></p>
     </main>
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="menu.js"></script>
 </body>
 
 </html>
