Agregue el link a estilos fonts

--- a/color.html
+++ b/color.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="fonts.css">    
     <title>Canaricultores VM</title>
 </head>
 
@@ -163,7 +164,7 @@
         <p>Fuente: <a href="https://www.canarios.top/canarios-de-color/#Clasificacion_del_canario_de_color">Canarios.top</a></p>
 
     </main>
-    
+
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="menu.js"></script>
 </body>
