--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     </main>
 
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="script.js"></script>
     <script src="menu.js"></script>
 </body>
 
