cambios en detalles y agrugué contenidos

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
                     </ul>
                     <!-- TERMINA SUBMENU -->
                     </li>
-                    <li class="boton-menu"><a class="menulink" href="#">Ramas<span class="lnr lnr-chevron-down"></span></a>
+                    <li class="boton-menu"><a class="menulink" href="#">Ramas<span
+                                class="lnr lnr-chevron-down"></span></a>
                         <!-- COMIENZA SUBMENU -->
                         <ul class="submenu">
                             <li class="boton-submenu"><a href="#">Canto</a></li>
@@ -62,38 +63,70 @@
     </header>
     <main>
         <section>
-            <article>
-                <h2>Lorem ipsum</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, commodi deleniti. At non quis,
-                    unde blanditiis voluptas ut autem iste recusandae totam ratione distinctio eaque necessitatibus
-                    veniam omnis, iusto qui.</p>
-            </article>
-            <article>
-                <h2>Lorem ipsum2</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In doloremque, odio vel iure nobis ratione
-                    voluptas suscipit doloribus facere exercitationem officia. Minus atque recusandae numquam aliquid
-                    assumenda, excepturi nisi consequuntur.</p>
-            </article>
-            <article>
-                <h2>lorem ipsum3</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus quod laboriosam eveniet illum
-                    cumque non amet optio officia cupiditate dolores aut, quia perspiciatis rem corporis iure.
-                    Dignissimos, nobis? Perferendis, soluta!</p>
-            </article>
-            <article>
-                <h2>lorem ipsum3</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus quod laboriosam eveniet illum
-                    cumque non amet optio officia cupiditate dolores aut, quia perspiciatis rem corporis iure.
-                    Dignissimos, nobis? Perferendis, soluta!</p>
-            </article>
-        </section>
-        <aside>
-            <h2>lorem ipsun4</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio nihil dolores vitae veritatis minima
-                perferendis ipsam minus similique ea accusantium, est sunt quasi autem ratione placeat! Odit, libero!
-                Tempore, inventore!</p>
-        </aside>
+            <div class="article">
+                <article>
+                    <figure class="img-article">
+                        <img src="images/canario-phaeo.jpg" alt="Canario Phaeo">
+                        <figcaption>La foto de un bello ejemplar</figcaption>
+                    </figure>
+                    <h2>Canario Phaeo</h2><br>
+                    <p>Los ejemplares de canario Phaeo también son conocidos como rubinos o inos.
 
+                        La mutación Phaeo consiste en la inhibición eumelánica negra y marrón, mostrándose únicamente la
+                        feomelanina en una expresión máxima.
+
+                        Debido a ello ... <a href="">Ver mas.</a></p>
+                </article>
+            </div>
+            <div class="article">
+                <article>
+                    <figure class="img-article">
+                        <img src="images/canario-phaeo.jpg" alt="Canario Phaeo">
+                        <figcaption>La foto de un bello ejemplar</figcaption>
+                    </figure>
+                    <h2>Lorem ipsum2</h2><br>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In doloremque, odio vel iure nobis
+                        ratione
+                        voluptas suscipit doloribus facere exercitationem officia. Minus atque recusandae numquam
+                        aliquid
+                        assumenda, excepturi nisi consequuntur.</p>
+                </article>
+            </div>
+            <div class="article">
+                <article>
+                    <figure class="img-article">
+                        <img src="images/canario-phaeo.jpg" alt="Canario Phaeo">
+                        <figcaption>La foto de un bello ejemplar</figcaption>
+                    </figure>
+                    <h2>lorem ipsum3</h2><br>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus quod laboriosam eveniet illum
+                        cumque non amet optio officia cupiditate dolores aut, quia perspiciatis rem corporis iure.
+                        Dignissimos, nobis? Perferendis, soluta!</p>
+                </article>
+            </div>
+            <div class="article">
+                <article>
+                    <figure class="img-article">
+                        <img src="images/canario-phaeo.jpg" alt="Canario Phaeo">
+                        <figcaption>La foto de un bello ejemplar</figcaption>
+                    </figure>
+                    <h2>lorem ipsum3</h2><br>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus quod laboriosam eveniet illum
+                        cumque non amet optio officia cupiditate dolores aut, quia perspiciatis rem corporis iure.
+                        Dignissimos, nobis? Perferendis, soluta!</p>
+                </article>
+            </div>
+        </section>
+        <div class="aside">
+            <aside>
+                <h2>lorem ipsum4</h2>
+                <br>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio nihil dolores vitae veritatis minima
+                    perferendis ipsam minus similique ea accusantium, est sunt quasi autem ratione placeat! Odit,
+                    libero!
+                    Tempore, inventore!</p>
+            </aside>
+        </div>
 
     </main>
 
