--- a/amarillos.html
+++ b/amarillos.html
@@ -27,7 +27,8 @@
                     </ul>
                     <!-- TERMINA SUBMENU -->
                     </li>
-                    <li class="boton-menu"><a class="menulink" href="#">Ramas<span class="lnr lnr-chevron-down"></span></a>
+                    <li class="boton-menu"><a class="menulink" href="#">Ramas<span
+                                class="lnr lnr-chevron-down"></span></a>
                         <!-- COMIENZA SUBMENU -->
                         <ul class="submenu">
                             <li class="boton-submenu"><a href="#">Canto</a></li>
@@ -61,96 +62,109 @@
         <h1>Asociación Civil de Canaricultores Villamarienses</h1>
     </header>
     <main class="yellow">
-        <h2>Canarios Amarillos</h2><br>
+        <div class="text">
+            <h2>Canarios Amarillos</h2><br>
 
-        <p>
-            Se cree que el canario amarillo aparece a principios del siglo XVIII. Proviene de la primera mutación
-            natural del canario, en la que desaparecen las melaninas negra y marrón.
-            Esa mutación, llamada acianismo, atrofia las encimas que actúan en las células melanocitos, impidiendo que
-            se sintetice la melalina. La transformación hasta el lipocromo que conocemos fue gradual. Los primeros
-            ejemplares eran píos (manchas lipocrómicas con manchas melánicas) y hubo una intervención del hombre en los
-            cruces buscando la desaparición total de las melaninas.
-            Los primeros canarios amarillos eran nevados, ya que es la categoría natural del canario silvestre.
-            Las categorías posteriores de intenso y mosaico aparecen por mutaciones e hibridaciones respectivamente.
-        </p><br>
+            <p>
+                Se cree que el canario amarillo aparece a principios del siglo XVIII. Proviene de la primera mutación
+                natural del canario, en la que desaparecen las melaninas negra y marrón.
+                Esa mutación, llamada acianismo, atrofia las encimas que actúan en las células melanocitos, impidiendo
+                que
+                se sintetice la melalina. La transformación hasta el lipocromo que conocemos fue gradual. Los primeros
+                ejemplares eran píos (manchas lipocrómicas con manchas melánicas) y hubo una intervención del hombre en
+                los
+                cruces buscando la desaparición total de las melaninas.
+                Los primeros canarios amarillos eran nevados, ya que es la categoría natural del canario silvestre.
+                Las categorías posteriores de intenso y mosaico aparecen por mutaciones e hibridaciones respectivamente.
+            </p><br>
 
-        <h3>¿Como son los canarios amarillos?</h3><br>
-        <p>
-            El canario amarillo es igual a los canarios estándar en cuanto tamaño y morfología. Encontramos la
-            diferencia que lo hace destacar en el color de su plumaje amarillo. Por esta característica se agrupan
-            dentro de las razas de color.
-            En su plumaje hay una ausencia de melaninas dejando ver en su fenotipo sólo el color lipocromo amarillo.
-        </p>
-        <p>
-            Según su categoría podemos clasificarlos en:
-        </p><br>
-        <ul>
-            <li>Intenso</li>
-            <li>Nevado</li>
-            <li>Mosaico</li>
-            <li>Marfil</li>
-        </ul><br>
-        <h3>Canario Amarillo Intenso</h3><br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/xx_6HNSZENU" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe><br>
+            <h3>¿Como son los canarios amarillos?</h3><br>
+            <p>
+                El canario amarillo es igual a los canarios estándar en cuanto tamaño y morfología. Encontramos la
+                diferencia que lo hace destacar en el color de su plumaje amarillo. Por esta característica se agrupan
+                dentro de las razas de color.
+                En su plumaje hay una ausencia de melaninas dejando ver en su fenotipo sólo el color lipocromo amarillo.
+            </p>
+            <p>
+                Según su categoría podemos clasificarlos en:
+            </p><br>
+            <ul>
+                <li>Intenso</li>
+                <li>Nevado</li>
+                <li>Mosaico</li>
+                <li>Marfil</li>
+            </ul><br>
+            <h3>Canario Amarillo Intenso</h3><br>
+            <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/xx_6HNSZENU"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe><br>
 
-        <p>
-            En la categoría intenso el pigmento amarillo se extiende por toda la extensión de la pluma excepto el
-            subplumaje que permanece blanco.
-            No debe presentar nevaduras ni restos de lipocromo rojo, sin que tienda al amarillo marfil y presentando
-            uniformidad en la intensidad del color.
-            Las plumas remiges y timoneras también deben aparecer con un pigmento uniforme y homogéneo. Extendiéndose el
-            lipocromo por toda su extensión.
-            Los ejemplares con la zona de la cloaca pigmentada se consideran de mejor calidad.</p>
+            <p>
+                En la categoría intenso el pigmento amarillo se extiende por toda la extensión de la pluma excepto el
+                subplumaje que permanece blanco.
+                No debe presentar nevaduras ni restos de lipocromo rojo, sin que tienda al amarillo marfil y presentando
+                uniformidad en la intensidad del color.
+                Las plumas remiges y timoneras también deben aparecer con un pigmento uniforme y homogéneo.
+                Extendiéndose el
+                lipocromo por toda su extensión.
+                Los ejemplares con la zona de la cloaca pigmentada se consideran de mejor calidad.</p>
 
-        <h3>Canario Amarillo Nevado</h3><br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/NMjGu4Mw_pw" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe><br>
-        <p>
-            La categoría nevado se caracteriza porque no llega el pigmento a la punta de las plumas de cobertura,
-            presentándose una zona blanca desprovista de lipocromo.
-            Esa distribución del pimento produce un aspecto de escarchamiento, lo que da lugar a la denominación de
-            nevado.
-            Los ejemplares presentan visualmente un espolvoreo de harina o nieve sobre su plumaje.
-            La nevadura debe presentarse de forma uniforme sobre todo el plumaje y presentándose con un tamaño pequeño.
-        </p><br>
-        <h3>Canario Amarillo Mosaico</h3><br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/UoJ19lEFl0I" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe><br>
-        <p>
-            El amarillo mosaico presenta el lipocromo amarillo localizado (zonas de elección) inhibiendo el lipocromo en
-            otras zonas que se presentan blancas.
-            Esta categoría se caracteriza por un gran dimorfismo sexual, presentando machos y hembras diferentes zonas
-            de elección, determinadas por factores hormonales.
-            La intensidad del lipocromo suele ser mayor en los ejemplares machos.nEl lipocromo amarillo se debe
-            presentar intenso y puro en las zonas de elección.
-            Las remeras y timoneras deben presentar un color uniforme, siendo ejemplares mejores los que las presentan
-            blancas.
-            El carácter alas blancas es hereditario, así que podemos mejorar la calidad de nuestros ejemplares con la
-            selección adecuada de nuestros progenitores.
-            También influye la alimentación. Si en la preparación de los reproductores suprimimos la pigmentación con
-            carotenoides y durante la cría no administramos alimentos con carotenoides amarillos en exceso, ayudaremos a
-            evitar la pigmentación amarilla en las remeras y timoneras.
-        </p><br>
-        <h3>Canario Amarillo Marfil</h3><br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/mGQtNTX26L8" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe><br>
-        <p>
-            Denominamos así a los canarios lipocromos amarillos a los que les afecta la mutación marfil.
-            La mutación marfil se caracteriza por la dilución del lipocromo y la modificación de la estructura de la
-            pluma, haciéndola más fina y sedosa.
-            La tonalidad del color marfil varía de unos ejemplares a otros y produce una uniformidad en la totalidad del
-            lipocromo.
-        </p><br>
-        <p>Fuente: <a href="https://www.canarios.top/canario-amarillo/">Canarios.Top</a></p>
+            <h3>Canario Amarillo Nevado</h3><br>
+            <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/NMjGu4Mw_pw"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe><br>
+            <p>
+                La categoría nevado se caracteriza porque no llega el pigmento a la punta de las plumas de cobertura,
+                presentándose una zona blanca desprovista de lipocromo.
+                Esa distribución del pimento produce un aspecto de escarchamiento, lo que da lugar a la denominación de
+                nevado.
+                Los ejemplares presentan visualmente un espolvoreo de harina o nieve sobre su plumaje.
+                La nevadura debe presentarse de forma uniforme sobre todo el plumaje y presentándose con un tamaño
+                pequeño.
+            </p><br>
+            <h3>Canario Amarillo Mosaico</h3><br>
+            <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/UoJ19lEFl0I"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe><br>
+            <p>
+                El amarillo mosaico presenta el lipocromo amarillo localizado (zonas de elección) inhibiendo el
+                lipocromo en
+                otras zonas que se presentan blancas.
+                Esta categoría se caracteriza por un gran dimorfismo sexual, presentando machos y hembras diferentes
+                zonas
+                de elección, determinadas por factores hormonales.
+                La intensidad del lipocromo suele ser mayor en los ejemplares machos.nEl lipocromo amarillo se debe
+                presentar intenso y puro en las zonas de elección.
+                Las remeras y timoneras deben presentar un color uniforme, siendo ejemplares mejores los que las
+                presentan
+                blancas.
+                El carácter alas blancas es hereditario, así que podemos mejorar la calidad de nuestros ejemplares con
+                la
+                selección adecuada de nuestros progenitores.
+                También influye la alimentación. Si en la preparación de los reproductores suprimimos la pigmentación
+                con
+                carotenoides y durante la cría no administramos alimentos con carotenoides amarillos en exceso,
+                ayudaremos a
+                evitar la pigmentación amarilla en las remeras y timoneras.
+            </p><br>
+            <h3>Canario Amarillo Marfil</h3><br>
+            <iframe class="video" width="560" height="315" src="https://www.youtube.com/embed/mGQtNTX26L8"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe><br>
+            <p>
+                Denominamos así a los canarios lipocromos amarillos a los que les afecta la mutación marfil.
+                La mutación marfil se caracteriza por la dilución del lipocromo y la modificación de la estructura de la
+                pluma, haciéndola más fina y sedosa.
+                La tonalidad del color marfil varía de unos ejemplares a otros y produce una uniformidad en la totalidad
+                del
+                lipocromo.
+            </p><br>
+            <p>Fuente: <a href="https://www.canarios.top/canario-amarillo/">Canarios.Top</a></p>
+        </div>
     </main>
     <script src="script.js"></script>
     <script src="menu.js"></script>
