--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="fonts.css">
+    <link rel="icon" href="images/favicon.png">
     <title>Canaricultores VM</title>
 </head>
 
