correcciones en el menu

--- a/amarillos.html
+++ b/amarillos.html
@@ -7,54 +7,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="fonts.css">
+    <link rel="icon" href="images/favicon.png">
     <title>Canaricultores VM</title>
 </head>
-
 <body>
     <header>
         <div class="menu-btn">
-            <a href="#" class="btn-menu">Menu</a><span class="lnr lnr-menu"></span>
+            <a class="menulink" href="#" class="btn-menu">Menu</a><span class="lnr lnr-menu"></span>
         </div>
         <div class="contenedor-menu">
             <nav>
                 <ul class="menu">
-                    <li class="boton-menu"><a href="index.html">Inicio</a></li>
-                    <li class="boton-menu"><a href="#">Institucional</a></li>
+                    <li class="boton-menu"><a class="menulink" href="index.html">Inicio</a></li>
+                    <li class="boton-menu"><a class="menulink" href="#">Institucional<span
+                        class="lnr lnr-chevron-down"></span></a>
+                        <ul class="submenu">
+                            <li class="boton-submenu"><a class="menulink" href="#">Quienes Somos</a></li>
+                            <li class="boton-submenu"><a class="menulink" href="#">Autoridades</a></li>
+                        </ul>
+                    </li>
                     <!-- COMIENZA SUBMENU -->
-                    <ul class="submenu">
-                        <li class="boton-submenu"><a chref="#">Quienes Somos</a></li>
-                        <li class="boton-submenu"><a chref="#">Autoridades</a></li>
-                    </ul>
+                    
                     <!-- TERMINA SUBMENU -->
                     </li>
                     <li class="boton-menu"><a class="menulink" href="#">Ramas<span
                                 class="lnr lnr-chevron-down"></span></a>
                         <!-- COMIENZA SUBMENU -->
                         <ul class="submenu">
-                            <li class="boton-submenu"><a href="#">Canto</a></li>
-                            <li class="boton-submenu"><a href="color.html">Color</a></li>
-                            <li class="boton-submenu"><a href="#">Exóticos</a></li>
-                            <li class="boton-submenu"><a href="#">Fauna</a></li>
-                            <li class="boton-submenu"><a href="#">Híbridos</a></li>
-                            <li class="boton-submenu"><a href="#">Palomas y Gallináceos</a></li>
-                            <li class="boton-submenu"><a href="#">Pericos Ondulados Estandarizados</a></li>
-                            <li class="boton-submenu"><a href="#">Porte</a></li>
-                            <li class="boton-submenu"><a href="#">Psitácidos</a></li>
+                            <li class="boton-submenu"><a class="menulink" href="canto.html">Canto</a></li>
+                            <li class="boton-submenu"><a class="menulink" href="color.html">Color</a></li>
+                            <li class="boton-submenu"><a class="menulink" href="#">Exóticos</a></li>
+                            <li class="boton-submenu"><a class="menulink" href="#">Fauna</a></li>
+                            <li class="boton-submenu"><a class="menulink" href="#">Híbridos</a></li>
+                            <li class="boton-submenu"><a class="menulink" href="#">Palomas y Gallináceos</a></li>
+                            <li class="boton-submenu"><a class="menulink" href="#">Pericos Ondulados Estandarizados</a></li>
+                            <li class="boton-submenu"><a class="menulink" href="#">Porte</a></li>
+                            <li class="boton-submenu"><a class="menulink" href="#">Psitácidos</a></li>
                         </ul>
                         <!-- TERMINA SUBMENU -->
                     </li>
-                    <li class="boton-menu"><a href="#">Campeonatos</a></li>
-                    <li class="boton-menu"><a href="#">Novedades<span class="lnr lnr-chevron-down"></span></a>
+                    <li class="boton-menu"><a class="menulink" href="#">Campeonatos</a></li>
+                    <li class="boton-menu"><a class="menulink" href="#">Novedades<span class="lnr lnr-chevron-down"></span></a>
                         <!-- COMIENZA SUBMENU -->
                         <ul class="submenu">
-                            <li class="boton-submenu"><a href="#">Noticias</a></li>
-                            <li class="boton-submenu"><a href="#">Artículos</a></li>
-                            <li class="boton-submenu"><a href="#">Galería</a></li>
+                            <li class="boton-submenu"><a class="menulink" href="#">Noticias</a></li>
+                            <li class="boton-submenu"><a class="menulink" href="#">Artículos</a></li>
+                            <li class="boton-submenu"><a class="menulink" href="#">Galería</a></li>
                         </ul>
                         <!-- TERMINA SUBMENU -->
                     </li>
-                    <li class="boton-menu"><a href="#">Asociaciones</a></li>
-                    <li class="boton-menu"><a href="#">Información útil</a></li>
+                    <li class="boton-menu"><a class="menulink" href="#">Asociaciones</a></li>
+                    <li class="boton-menu"><a class="menulink" href="#">Información útil</a></li>
                 </ul>
             </nav>
         </div>
